...
    <string name="saved_questions">Saved questions</string>
    <string name="wordle">Wordle</string>
    <string name="wordle_infinite">Wordle infinite</string>
    <string name="wordle_daily">Daily wordle</string>
    <string name="verify">Verify</string>
    <string name="play_again">Play again</string>
    <string name="close">Close</string>
    <string name="game_over">Game Over</string>
    <string name="item_empty">Item empty</string>
    <string name="item_i_none">Item %1$s none</string>
    <string name="item_i_present">Item %1$s present</string>
    <string name="item_i_correct">Item %1$s correct</string>
    <string name="four_letters">4 Letters</string>
    <string name="five_letters">5 Letters</string>
    <string name="six_letters">6 Letters</string>
...
    <string name="required_xp_to_next_level">Required xp to next level</string>
    <string name="photo_of_s">Photo of %1$s</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_night">Good night</string>
    <string name="no_diamonds">No diamonds</string>
    <string name="skip_question_q">Skip question?</string>
    <plurals name="you_have_n_diamonds_skip_question_q">
        <item quantity="one">You have one diamond, do you want to use the diamond to skip this question?</item>
        <item quantity="other">You have %1$d diamonds, do you want to use %2$d diamonds to skip this question?</item>
    </plurals>
    <string name="no_diamonds_to_skip_question_description">You don\'t have diamonds to skip this question!</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="guess_the_word">Guess the Word</string>
    <string name="guess_the_number">Guess the Number</string>
    <string name="guess_math_formula">Guess math formula</string>
    <string name="guess_solution">Guess solution</string>
...
