...

                }

                IconButton(onClick = { expanded = !expanded }) {
                    Icon(
                        imageVector = dropDownIcon,
                        contentDescription = "Expand custom options"
                    )
                }
            }

            AnimatedVisibility(visible = expanded) {
                Column {
...
                    )
                    Spacer(modifier = Modifier.height(spaceMedium))
                    Button(
                        onClick = { onClick(seed.toIntOrNull()) },
                        modifier = Modifier.align(Alignment.End)
                    ) {
                        Text(text = "Generate")
                    }
                }
            }
        }
    }
}
...
