...
                    onGenerateClick(null, offlineMultiChoiceCategories, offlineWordleCategories)
                }
            )
        }

        item {
            GenerateCustomMaze(onClick = onGenerateClick)
        }
    }
}

@Composable
@ExperimentalMaterial3Api
...
