...
}

private const val NAV_TO_RESULTS_DELAY_MILLIS = 1000L

@VisibleForTesting(otherwise = VisibleForTesting.PRIVATE)
internal object WordleScreenTestTags {
    const val VERIFY_FAB = "VERIFY_FAB"
    const val LOADING_PROGRESS_INDICATOR = "LOADING_PROGRESS_INDICATOR"
    const val KEYBOARD = "KEYBOARD"
    const val WORDLE_ROW = "WORDLE_ROW"
}

@Composable
@PreviewScreenSizes
@OptIn(ExperimentalMaterial3WindowSizeClassApi::class)
...
